# MyWebSocket

./: CMakeLists.txt  README.md  client.cpp  main.cpp
include/: MyWebSocket.h  WebSocket.h  WsServer.h  httpserver.h
src/core/: FileReader.cpp  FileReader.h  Router.cpp  Router.h  WebSocket.cpp  WsServer.cpp  httpReq.cpp  httpReq.h  httpResp.cpp  httpResp.h  httpRouter.cpp  httpRouter.h  httpserver.cpp  websocket_parser.cpp  websocket_parser.h
src/include/: httpserver.h
src/util/: jwt.cpp  jwt.h
src/util/http-parser/: CMakeLists.txt
test/: WsServer.cpp  test_jwt.cpp  test_router.cpp  test_sendfile.cpp
test/wsClient/: client.js  package.json
